--- a/secondpage.html
+++ b/secondpage.html
@@ -27,7 +27,7 @@
 		  <label >User Name:</label>
 			<input type="text" id="user_name" class="form-control" placeholder="User Name" style="color: tomato; font-weight: bold;">
 		</div>
-		<button id="login_button" onclick="addser()">Log in</button>
+		<button id="login_button" onclick="addUser()">Log in</button>
 		<br><br>
 	</div>
 </center>
